# SelfSTUDY

Cpp/effectiveCpp/chapter_2_auto_type_deduction/: TODO.txt
Cpp/effectiveCpp/chapter_3_decltype/: CMakeLists.txt
ML_usefulInfo/: MXNet.txt
MachineLearning/pythonMachineLearningBook/: README_Anaconda.txt
Python/AdventOfCode2021/Day23/: a_star_search_algorithm.py
Python/pythonCERNCourse/: cython-etc.tgz  day4.py  dummy.txt  memo.py  memo_solution_by_teacher.py  myfile  notes_day4.txt  pqueue.py  pqueue_solutions_by_teachers.py
Python/pythonCERNCourse/Hands-On Introduction to Python Programming_files/: slides.js
Resources/: conferences.txt
VIM/examplesFromPracticalVimBook/: dnvim2-code.tgz
VIM/pieceOfCodeToExcercise/: MuonRecoMisID.cpp  PandoraSettingsDefault.xml  drawComparison.py  fccReconstruction_storeMuonClusters_june1.xml
effectiveCpp/chapter_1_template_type_deduction/: TODO.txt
effectiveCpp/chapter_1_template_type_deduction/MyAnalysis/: CMakeLists.txt  MyAnalysis_p1.cpp  MyAnalysis_p2.cpp
effectiveCpp/chapter_2_auto_type_deduction/: CMakeLists.txt
effectiveCpp/chapter_2_auto_type_deduction/MyAnalysis/: CMakeLists.txt
effectiveCpp/template/: CMakeLists.txt
pythonCERNCourse/: Hands-On Introduction to Python Programming.html  day1.py  day2.py  day3.py  day4.py  dummy2.txt  notes_day1.txt  notes_day2.txt  notes_day3.txt  test-memo.py  test-queue.py
pythonCERNCourse/cython-etc/: compare.ipynb  cython-etc.yml  source-me.sh
pythonMachineLearningBook/myCode/ch02/: perceptron.py
pythonMachineLearningBook/python_ML_modules/: ipython.py
(+4 files in other folders)
